--- a/extensions-contrib/consul-extensions/pom.xml
+++ b/extensions-contrib/consul-extensions/pom.xml
@@ -58,6 +58,22 @@
       <artifactId>consul-api</artifactId>
       <version>${consul.client.version}</version>
     </dependency>
+    <dependency>
+      <groupId>org.apache.druid.extensions</groupId>
+      <artifactId>simple-client-sslcontext</artifactId>
+      <version>${project.parent.version}</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.httpcomponents</groupId>
+      <artifactId>httpclient</artifactId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.httpcomponents</groupId>
+      <artifactId>httpcore</artifactId>
+      <scope>provided</scope>
+    </dependency>
 
     <!-- Provided dependencies -->
     <dependency>
